--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "jwt-simple": "^0.5.6",
-    "mongoose": "^8.3.2"
+    "mongoose": "^8.3.2",
+    "zod": "^3.22.5"
   }
 }
